@@ -2,6 +2,7 @@ package snek;
 
 import javafx.animation.PathTransition;
 import javafx.application.Application;
+import javafx.application.Platform;
 import javafx.beans.value.ChangeListener;
 import javafx.beans.value.ObservableListValue;
 import javafx.beans.value.ObservableValue;
@@ -10,9 +11,8 @@ import javafx.collections.ObservableList;
 import javafx.event.Event;
 import javafx.event.EventHandler;
 import javafx.event.EventType;
-import javafx.geometry.Bounds;
-import javafx.geometry.Orientation;
-import javafx.geometry.Rectangle2D;
+import javafx.geometry.*;
+import javafx.geometry.Insets;
 import javafx.scene.Group;
 import javafx.scene.Node;
 import javafx.scene.Scene;
@@ -20,16 +20,28 @@ import javafx.scene.control.Button;
 import javafx.scene.control.ChoiceBox;
 import javafx.scene.control.Label;
 import javafx.scene.control.SplitPane;
+import javafx.scene.image.Image;
 import javafx.scene.input.MouseEvent;
 import javafx.scene.layout.*;
 import javafx.scene.paint.Color;
+import javafx.scene.paint.ImagePattern;
 import javafx.scene.shape.*;
+import javafx.scene.shape.Polygon;
+import javafx.scene.shape.Shape;
 import javafx.scene.text.Font;
 import javafx.scene.text.Text;
 import javafx.stage.Screen;
 import javafx.stage.Stage;
 import javafx.util.Duration;
+import sun.security.krb5.internal.crypto.Des;
+
+import java.awt.*;
+import java.net.URL;
+import java.net.URLClassLoader;
 import java.util.Random;
+import java.util.Stack;
+import java.util.Timer;
+import java.util.TimerTask;
 
 public class PlayGame extends Application{
     private Label score;
@@ -38,7 +50,6 @@ public class PlayGame extends Application{
     private double windowHeight;
     private double boxWidth = 80;
     private double boxHeight = 50;
-
     private double gamePaneWidth;
     private double gamePaneHeight;
     private double optionsPaneWidth;
@@ -61,6 +72,7 @@ public class PlayGame extends Application{
     private int numberOfBalls;
     private int numberOfCoins;
     private int numberOfWalls;
+    private int PlayerScore = 0;
 
     private double wallHeight = 200;
 
@@ -68,11 +80,25 @@ public class PlayGame extends Application{
     private Button confirmButton;
     private Stage window;
     private Main main;
+    private ResultWindow resultWindow;
     private PlayGame game;
 
     private boolean alternateFallBoxes = true;
 
     private Snake snake;
+
+    private Path[] pathBoxes;
+    private Path[] alternatePathBoxes;
+
+    private PathTransition[] pathTransitionBoxes;
+    private PathTransition[] pathTransitionBoxesAlternate;
+    private PathTransition[] pathTransitionBalls;
+    private PathTransition[] pathTransitionBallsAlternate;
+    private PathTransition[] pathTransitionCoins;
+    private PathTransition[] pathTransitionWalls;
+
+    private PathTransition pathTransitionShield;
+    private PathTransition pathTransitionMagnet;
 
     final String IDLE_BUTTON_STYLE = "-fx-padding: 8 15 15 15;"+
             "-fx-background-insets: 0,0 0 5 0, 0 0 6 0, 0 0 7 0;"+
@@ -197,43 +223,51 @@ public class PlayGame extends Application{
             boxes[x].boundsInParentProperty().addListener(new ChangeListener<Bounds>() {
                 @Override
                 public void changed(ObservableValue<? extends Bounds> observable, Bounds oldValue, Bounds newValue) {
-//                            System.out.println(newValue);
-                    Ball ball = (Ball) snake.getFirst().getChildren().get(0);
-                    DestroyBlock blok = (DestroyBlock) boxes[index].getChildren().get(0);
-//                            System.out.println(ball + " " + blok);
+                    Ball ball;
+                    DestroyBlock blok;
+
+                    try{
+                        ball = (Ball) snake.getFirst().getChildren().get(0);
+                        blok = (DestroyBlock) boxes[index].getChildren().get(0);
+                    } catch (Exception e){
+                        ball = null;
+                        blok = null;
+                    }
+
+                    if(ball == null || blok == null)
+                        return;
+
                     Shape intersect = Shape.intersect(ball, blok);
                     if (intersect.getBoundsInLocal().getWidth() != -1) {
-                        if(blok.hit(snake.getLength())){
+                        boolean hit = blok.hit(snake.getLength());
 
+                        if(snake.isHasShield()){
                             snake.removeBalls(blok.getBoxValue(),gameGridPane);
-                            score.setText(Integer.toString(snake.getLength()));
-//                            System.out.println("LALAL");
-                            boxes[index].getChildren().remove(0);
-                            boxes[index].getChildren().remove(1);
-//                            try {
-//                                Thread.sleep(2000);
-//                            } catch (InterruptedException e) {
-//                                e.printStackTrace();
-//                            }
-//                            //  boxes[index].getChildren().addAll(blok, text);
-//                            //
+                            boxes[index].getChildren().remove(0, 1);
+                            addFire(index, blok);
+                        }
+                        else if(hit && blok.getBoxValue() <= 5){
+                            snake.removeBalls(blok.getBoxValue(),gameGridPane);
+//                            boxes[index].getChildren().remove(0, 1);
+                            addFire(index, blok);
+                        }
+                        else if(blok.getBoxValue() > 5 && !snake.isHasShield() && hit){
+                            pauseBoxes();
+
+                            snake.removeBalls(blok.getBoxValue(), gameGridPane);
+                            Text text = (Text) boxes[index].getChildren().get(1);
+                            text.setText(String.valueOf(blok.getBoxValue() - 5));
+                            blok.reduceValue(5);
                         }
                         else{
-                            score.setText("game over bithc");
-
                             try {
-                                main.start(window);
+                                stopAllAnim();
+                                window.close();
+                                resultWindow.setScore(Integer.parseInt(score.getText()));
+                                resultWindow.start(window);
                             } catch (Exception e) {
                                 e.printStackTrace();
                             }
-//                            snake.removeBalls(blok.getBoxValue(),gameGridPane);
-//                            score.setText(Integer.toString(snake.getLength()));
-
-//                            Text text = (Text) boxes[index].getChildren().get(1);
-//                            text.setText(Integer.toString(Integer.parseInt(text.getText()) - 1));
-//                            boxes[index].getChildren().remove(0);
-//                            boxes[index].getChildren().remove(1);
-//                            boxes[index].getChildren().addAll(blok, text);
                         }
                     }
                 }
@@ -248,89 +282,157 @@ public class PlayGame extends Application{
             boxesAlternate[x].boundsInParentProperty().addListener(new ChangeListener<Bounds>() {
                 @Override
                 public void changed(ObservableValue<? extends Bounds> observable, Bounds oldValue, Bounds newValue) {
-//                            System.out.println(newValue);
-                    Ball ball = (Ball) snake.getFirst().getChildren().get(0);
-                    DestroyBlock blok = (DestroyBlock) boxesAlternate[index].getChildren().get(0);
-//                            System.out.println(ball + " " + blok);
+                    Ball ball;
+                    DestroyBlock blok;
+
+                    try{
+                        ball = (Ball) snake.getFirst().getChildren().get(0);
+                        blok = (DestroyBlock) boxesAlternate[index].getChildren().get(0);
+                    } catch (Exception e){
+                        ball = null;
+                        blok = null;
+                    }
+
+                    if(ball == null || blok == null)
+                        return;
+
                     Shape intersect = Shape.intersect(ball, blok);
                     if (intersect.getBoundsInLocal().getWidth() != -1) {
-                        if(blok.hit(snake.getLength())){
+                        boolean hit = blok.hit(snake.getLength());
 
+                        if(snake.isHasShield()){
                             snake.removeBalls(blok.getBoxValue(),gameGridPane);
-                            score.setText(Integer.toString(snake.getLength()));
-//                            System.out.println("LALAL");
-                            boxesAlternate[index].getChildren().remove(0);
-                            boxesAlternate[index].getChildren().remove(1);
-//                            try {
-//                                Thread.sleep(2000);
-//                            } catch (InterruptedException e) {
-//                                e.printStackTrace();
-//                            }
-//                            //  boxes[index].getChildren().addAll(blok, text);
-//                            //
+                            boxesAlternate[index].getChildren().remove(0, 1);
+                            addFireAlternate(index, blok);
+                        }
+                        else if(hit && blok.getBoxValue() <= 5){
+                            snake.removeBalls(blok.getBoxValue(),gameGridPane);
+                            boxesAlternate[index].getChildren().remove(0, 1);
+                            addFireAlternate(index, blok);
+                        }
+                        else if(blok.getBoxValue() > 5 && hit){
+                            pauseBoxes();
+                            snake.removeBalls(blok.getBoxValue(), gameGridPane);
+                            Text text = (Text) boxesAlternate[index].getChildren().get(1);
+                            text.setText(String.valueOf(blok.getBoxValue() - 5));
+                            blok.reduceValue(5);
                         }
                         else{
-                            score.setText("game over bithc");
-
                             try {
-                                main.start(window);
+                                stopAllAnim();
+                                window.close();
+                                resultWindow.setScore(Integer.parseInt(score.getText()));
+                                resultWindow.start(window);
                             } catch (Exception e) {
                                 e.printStackTrace();
                             }
-//                            snake.removeBalls(blok.getBoxValue(),gameGridPane);
-//                            score.setText(Integer.toString(snake.getLength()));
-
-//                            Text text = (Text) boxes[index].getChildren().get(1);
-//                            text.setText(Integer.toString(Integer.parseInt(text.getText()) - 1));
-//                            boxes[index].getChildren().remove(0);
-//                            boxes[index].getChildren().remove(1);
-//                            boxes[index].getChildren().addAll(blok, text);
                         }
                     }
                 }
             });
         }
-//        for(int x = 0; x<boxesAlternate.length; x++){
-//            final int index = x;
-//
-//            if(boxesAlternate[x] == null)
-//                continue;
-//
-//            boxesAlternate[x].boundsInParentProperty().addListener(new ChangeListener<Bounds>() {
-//                @Override
-//                public void changed(ObservableValue<? extends Bounds> observable, Bounds oldValue, Bounds newValue) {
-////                            System.out.println(newValue);
-//                    Ball ball = (Ball) snake.getFirst().getChildren().get(0);
-//                    DestroyBlock blok = (DestroyBlock) boxesAlternate[index].getChildren().get(0);
-////                            System.out.println(ball + " " + blok);
-//                    Shape intersect = Shape.intersect(ball, blok);
-//                    if (intersect.getBoundsInLocal().getWidth() != -1) {
-//                        if(blok.hit(snake.getLength())){
-//                            snake.removeBalls(blok.getBoxValue(),gameGridPane);
-//                            score.setText(Integer.toString(snake.getLength()));
-//                            System.out.println("LALAL");
-//                            boxesAlternate[index].getChildren().remove(0);
-//                            boxesAlternate[index].getChildren().remove(1);
-//                           // boxesAlternate[index].getChildren().addAll(blok, text);
-//                        }
-//                        else{
-////                            snake.removeBalls(blok.getBoxValue(),gameGridPane);
-////                            score.setText(Integer.toString(snake.getLength()));
-//                            Text text = (Text) boxesAlternate[index].getChildren().get(1);
-//                            text.setText(Integer.toString(Integer.parseInt(text.getText()) - 1));
-//                            boxesAlternate[index].getChildren().remove(0);
-//                            boxesAlternate[index].getChildren().remove(1);
-//                            boxesAlternate[index].getChildren().addAll(blok, text);
-//                        }
-//                    }
-//                }
-//            });
-//        }
+    }
 
+    private void stopAllAnim(){
+        for(int i=0; i<pathBoxes.length; i++){
+            if(pathTransitionBoxes[i] != null)
+                pathTransitionBoxes[i].stop();
+
+            if(pathTransitionBoxesAlternate[i] != null)
+                pathTransitionBoxesAlternate[i].stop();
+        }
+
+        for(int i=0; i<coins.length; i++){
+            if(pathTransitionCoins[i] != null)
+                pathTransitionCoins[i].stop();
+        }
+
+        for(int i=0; i<balls.length; i++){
+            if(pathTransitionBalls[i] != null)
+                pathTransitionBalls[i].stop();
+        }
+
+        for(int i=0; i<ballsAlternate.length; i++){
+            if(pathTransitionBallsAlternate[i] != null)
+                pathTransitionBallsAlternate[i].stop();
+        }
+
+        for(int i=0; i<walls.length; i++){
+            if(pathTransitionWalls[i] != null)
+                pathTransitionWalls[i].stop();
+        }
+
+        if(pathTransitionMagnet != null)
+            pathTransitionMagnet.stop();
+
+        if(pathTransitionShield != null)
+            pathTransitionShield.stop();
+    }
+
+    private void addFireAlternate(int index, DestroyBlock blok){
+        Timer timer = new Timer();
+
+        try{
+            boxesAlternate[index].getChildren().remove(1);
+            boxesAlternate[index].getChildren().remove(0);
+        } catch (Exception e){
+
+        }
+
+        DestroyBlock rect = createBlok();
+        boxesAlternate[index].setBackground(new Background(new BackgroundFill(new ImagePattern(new Image(getClass().getClassLoader().getResource("littt.png").toString())), CornerRadii.EMPTY, Insets.EMPTY)));
+        rect.setFill(Color.TRANSPARENT);
+//        rect.setStyle("-fx-background-image: url(littt.png)");
+
+        TimerTask timerTask = new TimerTask() {
+            @Override
+            public void run() {
+                Platform.runLater(new Runnable() {
+                    @Override
+                    public void run() {
+                        boxesAlternate[index].setBackground(Background.EMPTY);
+                    }
+                });
+            }
+        };
+
+        timer.schedule(timerTask, 500);
+    }
+
+    private void addFire(int index, DestroyBlock blok){
+        Timer timer = new Timer();
+
+        try{
+            boxes[index].getChildren().remove(1);
+            boxes[index].getChildren().remove(0);
+        } catch (Exception e){
+
+        }
+
+        DestroyBlock rect = createBlok();
+        boxes[index].setBackground(new Background(new BackgroundFill(new ImagePattern(new Image(getClass().getClassLoader().getResource("littt.png").toString())), CornerRadii.EMPTY, Insets.EMPTY)));
+        rect.setFill(Color.TRANSPARENT);
+//        rect.setStyle("-fx-background-image: url(littt.png)");
+
+        TimerTask timerTask = new TimerTask() {
+            @Override
+            public void run() {
+                Platform.runLater(new Runnable() {
+                    @Override
+                    public void run() {
+                        boxes[index].setBackground(Background.EMPTY);
+                    }
+                });
+            }
+        };
+
+        timer.schedule(timerTask, 500);
     }
 
     private void boxesFall(){
-        Path [] pathBoxes = new Path[boxes.length];
+        pathBoxes = new Path[boxes.length];
+        pathTransitionBoxes = new PathTransition[boxes.length];
+
         boolean setNext = false;
         for(int i=0; i<pathBoxes.length; i++){
             if(boxes[i] == null)
@@ -340,11 +442,11 @@ public class PlayGame extends Application{
 
             pathBoxes[i].getElements().add(new MoveTo(boxes[i].getTranslateX() + boxWidth/2, boxes[i].getTranslateY()));
             pathBoxes[i].getElements().add(new LineTo(boxes[i].getTranslateX() + boxWidth/2, gamePaneHeight + (wallHeight+boxHeight+boxHeight)));
-            PathTransition pathTransition = new PathTransition();
-            pathTransition.setDuration(Duration.millis(3000));
-            pathTransition.setPath(pathBoxes[i]);
-            pathTransition.setNode(boxes[i]);
-            pathTransition.play();
+            pathTransitionBoxes[i] = new PathTransition();
+            pathTransitionBoxes[i].setDuration(Duration.millis(3000));
+            pathTransitionBoxes[i].setPath(pathBoxes[i]);
+            pathTransitionBoxes[i].setNode(boxes[i]);
+            pathTransitionBoxes[i].play();
             if(!setNext) {
                 setNext = true;
 //                pathTransition.setOnFinished(e -> nextCycle());
@@ -353,25 +455,105 @@ public class PlayGame extends Application{
 
         if(alternateFallBoxes){
             alternateFallBoxes = false;
-            Path [] pathBoxesAlternate = new Path[boxesAlternate.length];
+            alternatePathBoxes = new Path[boxesAlternate.length];
+            pathTransitionBoxesAlternate = new PathTransition[boxesAlternate.length];
 
-            for(int i=0; i<pathBoxesAlternate.length; i++){
+            for(int i=0; i<alternatePathBoxes.length; i++){
 
                 if(boxesAlternate[i] == null)
                     continue;
 
-                pathBoxesAlternate[i] = new Path();
+                alternatePathBoxes[i] = new Path();
 
-                pathBoxesAlternate[i].getElements().add(new MoveTo(boxesAlternate[i].getTranslateX() + boxWidth/2, boxesAlternate[i].getTranslateY()));
-                pathBoxesAlternate[i].getElements().add(new LineTo(boxesAlternate[i].getTranslateX() + boxWidth/2, gamePaneHeight + (wallHeight+boxHeight+boxHeight)));
-                PathTransition pathTransition = new PathTransition();
-                pathTransition.setDuration(Duration.millis(3000));
-                pathTransition.setPath(pathBoxesAlternate[i]);
-                pathTransition.setNode(boxesAlternate[i]);
-                pathTransition.setDelay(new Duration(1500));
-                pathTransition.play();
+                alternatePathBoxes[i].getElements().add(new MoveTo(boxesAlternate[i].getTranslateX() + boxWidth/2, boxesAlternate[i].getTranslateY()));
+                alternatePathBoxes[i].getElements().add(new LineTo(boxesAlternate[i].getTranslateX() + boxWidth/2, gamePaneHeight + (wallHeight+boxHeight+boxHeight)));
+                pathTransitionBoxesAlternate[i] = new PathTransition();
+                pathTransitionBoxesAlternate[i].setDuration(Duration.millis(3000));
+                pathTransitionBoxesAlternate[i].setPath(alternatePathBoxes[i]);
+                pathTransitionBoxesAlternate[i].setNode(boxesAlternate[i]);
+                pathTransitionBoxesAlternate[i].setDelay(new Duration(1500));
+                pathTransitionBoxesAlternate[i].play();
             }
         }
+    }
+
+    private void pauseBoxes(){
+        Timer timer = new Timer();
+
+        for(int i=0; i<pathBoxes.length; i++){
+            if(pathTransitionBoxes[i] != null)
+                pathTransitionBoxes[i].pause();
+
+            if(pathTransitionBoxesAlternate[i] != null)
+                pathTransitionBoxesAlternate[i].pause();
+        }
+
+        for(int i=0; i<coins.length; i++){
+            if(pathTransitionCoins[i] != null)
+                pathTransitionCoins[i].pause();
+        }
+
+        for(int i=0; i<balls.length; i++){
+            if(pathTransitionBalls[i] != null)
+                pathTransitionBalls[i].pause();
+        }
+
+        for(int i=0; i<ballsAlternate.length; i++){
+            if(pathTransitionBallsAlternate[i] != null)
+                pathTransitionBallsAlternate[i].pause();
+        }
+
+        for(int i=0; i<walls.length; i++){
+            if(pathTransitionWalls[i] != null)
+                pathTransitionWalls[i].pause();
+        }
+
+        if(pathTransitionMagnet != null)
+            pathTransitionMagnet.pause();
+
+        if(pathTransitionShield != null)
+            pathTransitionShield.pause();
+
+        TimerTask task = new TimerTask()
+        {
+            public void run()
+            {
+                for(int i=0; i<pathBoxes.length; i++){
+                    if(pathTransitionBoxes[i] != null)
+                        pathTransitionBoxes[i].play();
+
+                    if(pathTransitionBoxesAlternate[i] != null)
+                        pathTransitionBoxesAlternate[i].play();
+                }
+
+                for(int i=0; i<coins.length; i++){
+                    if(pathTransitionCoins[i] != null)
+                        pathTransitionCoins[i].play();
+                }
+
+                for(int i=0; i<balls.length; i++){
+                    if(pathTransitionBalls[i] != null)
+                        pathTransitionBalls[i].play();
+                }
+
+                for(int i=0; i<ballsAlternate.length; i++){
+                    if(pathTransitionBallsAlternate[i] != null)
+                        pathTransitionBallsAlternate[i].play();
+                }
+
+                for(int i=0; i<walls.length; i++){
+                    if(pathTransitionWalls[i] != null)
+                        pathTransitionWalls[i].play();
+                }
+
+                if(pathTransitionMagnet != null)
+                    pathTransitionMagnet.play();
+
+                if(pathTransitionShield != null)
+                    pathTransitionShield.play();
+            }
+        };
+        timer.schedule(task, 1000);
     }
 
     private void createBalls(){
@@ -422,26 +604,24 @@ public class PlayGame extends Application{
                 @Override
                 public void changed(ObservableValue<? extends Bounds> observable, Bounds oldValue, Bounds newValue) {
 //                            System.out.println(newValue);
-                    Ball ball = (Ball) snake.getFirst().getChildren().get(0);
-                    Ball boll = (Ball) balls[index].getChildren().get(0);
-//                            System.out.println(ball + " " + blok);
+                    Ball ball;
+                    Ball boll;
+                    try{
+                        ball = (Ball) snake.getFirst().getChildren().get(0);
+                        boll = (Ball) balls[index].getChildren().get(0);
+                    } catch (Exception e){
+                        ball = null;
+                        boll = null;
+                    }
+
+                    if(ball == null || boll == null)
+                        return;
+
                     Shape intersect = Shape.intersect(ball, boll);
+
                     if (intersect.getBoundsInLocal().getWidth() != -1) {
                         snake.addBalls(boll.getValue(),gameGridPane);
-                        //if(boll.hit()){
-                        System.out.println("LALAL");
-                        score.setText( Integer.toString(snake.getLength()));
-                        // boll.setFill(Color.TRANSPARENT);
-                        balls[index].getChildren().remove(0);
-                        balls[index].getChildren().remove(1);
-                        //}
-//                        else{
-//                            Text text = (Text) boxes[index].getChildren().get(1);
-//                            text.setText(Integer.toString(Integer.parseInt(text.getText()) - 1));
-//                            boxes[index].getChildren().remove(0);
-//                            boxes[index].getChildren().remove(1);
-//                            boxes[index].getChildren().addAll(blok, text);
-//                        }
+                        balls[index].getChildren().remove(0, 1);
                     }
                 }
             });
@@ -456,29 +636,28 @@ public class PlayGame extends Application{
                 @Override
                 public void changed(ObservableValue<? extends Bounds> observable, Bounds oldValue, Bounds newValue) {
 //                            System.out.println(newValue);
-                    Ball ball = (Ball) snake.getFirst().getChildren().get(0);
-                    Ball boll = (Ball) ballsAlternate[index].getChildren().get(0);
+                    Ball ball;
+                    Ball boll;
+
+                    try{
+                        ball = (Ball) snake.getFirst().getChildren().get(0);
+                        boll = (Ball) ballsAlternate[index].getChildren().get(0);
+                    } catch (Exception e){
+                        ball = null;
+                        boll = null;
+                    }
+
+                    if(boll == null || ball == null)
+                        return;
 //                            System.out.println(ball + " " + blok);
                     Shape intersect = Shape.intersect(ball, boll);
                     if (intersect.getBoundsInLocal().getWidth() != -1) {
                         //if(boll.hit()){
                         snake.addBalls(boll.getValue(),gameGridPane);
 
-                        System.out.println("LALAL");
-                        score.setText( Integer.toString(snake.getLength()));
-
                         //ballsAlternate[index].setStyle("-fx-background-color: #000000");
-                        ballsAlternate[index].getChildren().remove(0);
-                        ballsAlternate[index].getChildren().remove(1);
+                        ballsAlternate[index].getChildren().remove(0, 1);
 
-                        //}
-//                        else{
-//                            Text text = (Text) boxes[index].getChildren().get(1);
-//                            text.setText(Integer.toString(Integer.parseInt(text.getText()) - 1));
-//                            boxes[index].getChildren().remove(0);
-//                            boxes[index].getChildren().remove(1);
-//                            boxes[index].getChildren().addAll(blok, text);
-//                        }
                     }
                 }
             });
@@ -488,6 +667,7 @@ public class PlayGame extends Application{
     private void ballsFall(){
         Path [] pathBalls = new Path[balls.length];
         Path [] pathBallsAlternate = new Path[balls.length];
+        pathTransitionBalls = new PathTransition[balls.length];
 
         Random rand = new Random();
 
@@ -499,30 +679,31 @@ public class PlayGame extends Application{
 
             pathBalls[i].getElements().add(new MoveTo(balls[i].getTranslateX() + boxWidth / 2, balls[i].getTranslateY()));
             pathBalls[i].getElements().add(new LineTo(balls[i].getTranslateX() + boxWidth / 2, gamePaneHeight + (wallHeight+boxHeight+boxHeight)));
-            PathTransition pathTransition = new PathTransition();
-            pathTransition.setDuration(Duration.millis(3000));
-            pathTransition.setPath(pathBalls[i]);
-            pathTransition.setNode(balls[i]);
-            pathTransition.setDelay(new Duration(500 + rand.nextInt(500)));
-            pathTransition.play();
+            pathTransitionBalls[i] = new PathTransition();
+            pathTransitionBalls[i].setDuration(Duration.millis(3000));
+            pathTransitionBalls[i].setPath(pathBalls[i]);
+            pathTransitionBalls[i].setNode(balls[i]);
+            pathTransitionBalls[i].setDelay(new Duration(500 + rand.nextInt(500)));
+            pathTransitionBalls[i].play();
         }
 
         boolean setOnFinished = false;
         for(int i=0; i<ballsAlternate.length; i++){
             pathBallsAlternate[i] = new Path();
+            pathTransitionBallsAlternate = new PathTransition[ballsAlternate.length];
 
             pathBallsAlternate[i].getElements().add(new MoveTo(ballsAlternate[i].getTranslateX() + boxWidth/2, ballsAlternate[i].getTranslateY()));
             pathBallsAlternate[i].getElements().add(new LineTo(ballsAlternate[i].getTranslateX() + boxWidth/2, gamePaneHeight + (wallHeight+boxHeight+boxHeight)));
-            PathTransition pathTransition = new PathTransition();
-            pathTransition.setDuration(Duration.millis(3000));
-            pathTransition.setPath(pathBallsAlternate[i]);
-            pathTransition.setNode(ballsAlternate[i]);
-            pathTransition.setDelay(new Duration(2000));
+            pathTransitionBallsAlternate[i] = new PathTransition();
+            pathTransitionBallsAlternate[i].setDuration(Duration.millis(3000));
+            pathTransitionBallsAlternate[i].setPath(pathBallsAlternate[i]);
+            pathTransitionBallsAlternate[i].setNode(ballsAlternate[i]);
+            pathTransitionBallsAlternate[i].setDelay(new Duration(2000));
             if(!setOnFinished) {
                 setOnFinished = true;
-                pathTransition.setOnFinished(event -> nextCycle());
+                pathTransitionBallsAlternate[i].setOnFinished(event -> nextCycle());
             }
-            pathTransition.play();
+            pathTransitionBallsAlternate[i].play();
         }
     }
 
@@ -542,10 +723,46 @@ public class PlayGame extends Application{
 
             coins[i].setTranslateY(-(wallHeight+boxHeight+boxHeight));
         }
+
+        for(int i=0; i<numberOfCoins; i++){
+            final int index = i;
+
+            if(coins[i] == null){
+                continue;
+            }
+
+            coins[i].boundsInParentProperty().addListener(new ChangeListener<Bounds>() {
+                @Override
+                public void changed(ObservableValue<? extends Bounds> observable, Bounds oldValue, Bounds newValue) {
+                    Ball ball;
+                    Coin boll;
+
+                    try{
+                        ball = (Ball) snake.getFirst().getChildren().get(0);
+                        boll = (Coin) coins[index].getChildren().get(0);
+                    } catch (Exception e){
+                        ball = null;
+                        boll = null;
+                    }
+
+                    if(ball == null || boll == null)
+                        return;
+
+                    Shape intersect = Shape.intersect(ball, boll);
+
+                    if (intersect.getBoundsInLocal().getWidth() != -1) {
+                        PlayerScore += 1;
+                        score.setText(String.valueOf(PlayerScore));
+                        coins[index].getChildren().remove(0);
+                    }
+                }
+            });
+        }
     }
 
     private void coinsFall(){
         Path [] pathCoins = new Path[numberOfCoins];
+        pathTransitionCoins = new PathTransition[numberOfCoins];
         Random rand = new Random();
 
         for(int i=0; i<pathCoins.length; i++){
@@ -554,12 +771,12 @@ public class PlayGame extends Application{
 
             pathCoins[i].getElements().add(new MoveTo(coins[i].getTranslateX() + boxWidth/2, coins[i].getTranslateY()));
             pathCoins[i].getElements().add(new LineTo(coins[i].getTranslateX() + boxWidth/2, gamePaneHeight + (wallHeight+boxHeight+boxHeight)));
-            PathTransition pathTransition = new PathTransition();
-            pathTransition.setDuration(Duration.millis(3000));
-            pathTransition.setPath(pathCoins[i]);
-            pathTransition.setNode(coins[i]);
-            pathTransition.setDelay(new Duration(400 + rand.nextInt(500)));
-            pathTransition.play();
+            pathTransitionCoins[i] = new PathTransition();
+            pathTransitionCoins[i].setDuration(Duration.millis(3000));
+            pathTransitionCoins[i].setPath(pathCoins[i]);
+            pathTransitionCoins[i].setNode(coins[i]);
+            pathTransitionCoins[i].setDelay(new Duration(200 + rand.nextInt(500)));
+            pathTransitionCoins[i].play();
         }
     }
 
@@ -575,20 +792,46 @@ public class PlayGame extends Application{
 
         gameGridPane.add(shield, x, 3);
         shield.setTranslateY(-(wallHeight+boxHeight+boxHeight));
+
+        shield.boundsInParentProperty().addListener(new ChangeListener<Bounds>() {
+            @Override
+            public void changed(ObservableValue<? extends Bounds> observable, Bounds oldValue, Bounds newValue) {
+                Polygon poly;
+                Ball ball;
+                try{
+                    ball = (Ball) snake.getFirst().getChildren().get(0);
+                    poly = (Polygon) shield.getChildren().get(0);
+                } catch (Exception e){
+                    ball = null;
+                    poly = null;
+                }
+
+                if(ball == null || poly == null)
+                    return;
+
+                Shape intersect = Shape.intersect(ball, poly);
+                if (intersect.getBoundsInLocal().getWidth() != -1) {
+                    System.out.println("LALAL");
+                    snake.getShield();
+                    shield.getChildren().remove(0);
+                }
+            }
+        });
     }
 
     private void shieldFall(){
         Path shieldPath = new Path();
+        pathTransitionShield = new PathTransition();
         Random rand = new Random();
 
         shieldPath.getElements().add(new MoveTo(shield.getTranslateX() + boxWidth/2, shield.getTranslateY()));
         shieldPath.getElements().add(new LineTo(shield.getTranslateX() + boxWidth/2, gamePaneHeight + (wallHeight+boxHeight+boxHeight)));
-        PathTransition pathTransition = new PathTransition();
-        pathTransition.setDuration(Duration.millis(3000));
-        pathTransition.setPath(shieldPath);
-        pathTransition.setNode(shield);
-        pathTransition.setDelay(new Duration(700 + rand.nextInt(600)));
-        pathTransition.play();
+
+        pathTransitionShield.setDuration(Duration.millis(3000));
+        pathTransitionShield.setPath(shieldPath);
+        pathTransitionShield.setNode(shield);
+        pathTransitionShield.setDelay(new Duration(700 + rand.nextInt(600)));
+        pathTransitionShield.play();
     }
 
     private void addMagnet(){
@@ -596,30 +839,89 @@ public class PlayGame extends Application{
 
         int x = rand.nextInt(numberOfBoxes);
 
-        Magnet mag = new Magnet(10);
-        mag.setFill(Color.BLACK);
+//        Magnet mag = new Magnet(10);
+//        mag.setFill(Color.BLACK);
         Text text = new Text("U");
         text.setFont(Font.font ("Verdana", 20));
         text.setStyle("-fx-font-weight: bold");
         text.setFill(Color.MAGENTA);
-        magnet.getChildren().addAll(mag, text);
+        magnet.getChildren().addAll(text);
         gameGridPane.add(magnet, x, 2);
 
         magnet.setTranslateY(-(wallHeight+boxHeight+boxHeight));
+
+        magnet.boundsInParentProperty().addListener(new ChangeListener<Bounds>() {
+            @Override
+            public void changed(ObservableValue<? extends Bounds> observable, Bounds oldValue, Bounds newValue) {
+                Ball ball;
+                Text newMag;
+                try{
+                    ball = (Ball) snake.getFirst().getChildren().get(0);
+                    newMag = (Text) magnet.getChildren().get(0);
+                } catch (Exception e){
+                    ball = null;
+                    newMag = null;
+                }
+
+                if(ball == null || newMag == null)
+                    return;
+
+                Shape intersect = Shape.intersect(ball, newMag);
+                if (intersect.getBoundsInLocal().getWidth() != -1) {
+                    magnet.getChildren().remove(0);
+
+                    Bounds[] coinBounds = new Bounds[numberOfCoins];
+                    double[] distances = new double[numberOfCoins];
+
+                    for(int i=0; i<numberOfCoins; i++){
+                        if(coins[i] == null){
+                            coinBounds[i] = null;
+                            distances[i] = 9999;
+                        }
+                        else{
+                            coinBounds[i] = coins[i].getBoundsInParent();
+                            double X = oldValue.getMinX() - coinBounds[i].getMinX();
+                            double Y = oldValue.getMinY() - coinBounds[i].getMinY();
+                            double dist = Math.sqrt(Math.pow(X, 2) + Math.pow(Y, 2));
+                            distances[i] = dist;
+                        }
+                    }
+
+                    for(int i=0; i<numberOfCoins; i++){
+                        if(distances[i] == 9999)
+                            continue;
+                        if(distances[i] < 500){
+                            // Add the coin to score. :#
+                            PlayerScore++;
+                            score.setText(String.valueOf(PlayerScore));
+
+                            // take the coins.
+                            StackPane theCoin = coins[i];
+                            try{
+                                theCoin.getChildren().remove(0);
+                            } catch (Exception e){
+                                e.printStackTrace();
+                            }
+                        }
+                    }
+                }
+            }
+        });
     }
 
     private void magnetFall(){
         Path magPath = new Path();
+        pathTransitionMagnet = new PathTransition();
         Random rand = new Random();
 
         magPath.getElements().add(new MoveTo(magnet.getTranslateX() + boxWidth/2, magnet.getTranslateY()));
         magPath.getElements().add(new LineTo(magnet.getTranslateX() + boxWidth/2, gamePaneHeight + (wallHeight+boxHeight+boxHeight)));
-        PathTransition pathTransition = new PathTransition();
-        pathTransition.setDuration(Duration.millis(3000));
-        pathTransition.setPath(magPath);
-        pathTransition.setNode(magnet);
-        pathTransition.setDelay(new Duration(700 + rand.nextInt(600)));
-        pathTransition.play();
+
+        pathTransitionMagnet.setDuration(Duration.millis(3000));
+        pathTransitionMagnet.setPath(magPath);
+        pathTransitionMagnet.setNode(magnet);
+        pathTransitionMagnet.setDelay(new Duration(700 + rand.nextInt(600)));
+        pathTransitionMagnet.play();
     }
 
     private void createWalls(){
@@ -641,11 +943,53 @@ public class PlayGame extends Application{
             gameGridPane.add(walls[x], x, 1);
             walls[x].setTranslateY(-(wallHeight+boxHeight+boxHeight/2));
         }
+
+        for(int i=0; i<numberOfWalls; i++){
+            if(walls[i] == null)
+                continue;
+
+            final int index = i;
+
+            walls[i].boundsInParentProperty().addListener(new ChangeListener<Bounds>() {
+                @Override
+                public void changed(ObservableValue<? extends Bounds> observable, Bounds oldValue, Bounds newValue) {
+                    Ball ball;
+                    Wall wall;
+                    try{
+                        ball = (Ball) snake.getFirst().getChildren().get(0);
+                        wall = (Wall) walls[index].getChildren().get(0);
+                    } catch (Exception e){
+                        ball = null;
+                        wall = null;
+                    }
+
+                    if(ball == null || wall == null)
+                        return;
+
+                    Shape intersect = Shape.intersect(ball, wall);
+                    if (intersect.getBoundsInLocal().getWidth() != -1) {
+                        int Xlast = (int) snake.getXLast();
+                        int X = (int) snake.getXFirst();
+                        int Y = (int) snake.getYFirst();
+
+                        if(oldValue.getMinX() < Xlast){
+                            X -= 40;
+                        }
+                        else{
+                            X += 100;
+                        }
+                        moveCursor(X, Y);
+                    }
+
+                }
+            });
+        }
     }
 
     private void wallsFall(){
         Path [] pathWalls = new Path[walls.length];
-//        boolean setNext = false;
+        pathTransitionWalls = new PathTransition[walls.length];
+
         for(int i=0; i<pathWalls.length; i++){
             if(walls[i] == null)
                 continue;
@@ -654,13 +998,24 @@ public class PlayGame extends Application{
 
             pathWalls[i].getElements().add(new MoveTo(walls[i].getTranslateX(), walls[i].getTranslateY()));
             pathWalls[i].getElements().add(new LineTo(walls[i].getTranslateX(), gamePaneHeight + (wallHeight+boxHeight+3*boxHeight/2)));
-            PathTransition pathTransition = new PathTransition();
-            pathTransition.setDuration(Duration.millis(3000));
-            pathTransition.setPath(pathWalls[i]);
-            pathTransition.setNode(walls[i]);
-//            pathTransition.setDelay(new Duration(150));
-            pathTransition.play();
+            pathTransitionWalls[i] = new PathTransition();
+            pathTransitionWalls[i].setDuration(Duration.millis(3000));
+            pathTransitionWalls[i].setPath(pathWalls[i]);
+            pathTransitionWalls[i].setNode(walls[i]);
+            pathTransitionWalls[i].play();
         }
+    }
+
+    public void moveCursor(int screenX, int screenY) {
+        Platform.runLater(() -> {
+            try {
+                Robot robot = new Robot();
+                robot.mouseMove(screenX, screenY);
+            } catch (AWTException e) {
+                // TODO Auto-generated catch block
+                e.printStackTrace();
+            }
+        });
     }
 
     private void nextCycle(){
@@ -720,6 +1075,7 @@ public class PlayGame extends Application{
 
         main = new Main();
         game = new PlayGame();
+        resultWindow = new ResultWindow();
         window = primaryStage;
         Rectangle2D screenSize = Screen.getPrimary().getVisualBounds();
 
@@ -751,9 +1107,13 @@ public class PlayGame extends Application{
         Choices.setItems(FXCollections.observableArrayList(
                 "Restart", "Go Back"));
         Choices.getSelectionModel().selectFirst();
+        Choices.setPrefHeight(30);
+        Choices.setPrefWidth(200);
 
         confirmButton.setStyle(IDLE_BUTTON_STYLE);
         confirmButton.setText("Confirm");
+        confirmButton.setPrefHeight(30);
+        confirmButton.setPrefWidth(200);
         confirmButton.setOnAction(e->{
             if(Choices.getValue().equalsIgnoreCase("RESTART")){
                 try {
@@ -770,9 +1130,9 @@ public class PlayGame extends Application{
                 } catch (Exception e1) {
                     e1.printStackTrace();
                 }
-                //renderMainpage();
             }
         });
+
         confirmButton.setOnMousePressed(e -> {
             confirmButton.setStyle(PRESSED_BUTTON_STYLE);
         });
@@ -789,14 +1149,9 @@ public class PlayGame extends Application{
 
         snake = new Snake(10, gameGridPane, centerOfGamePaneHeight, centerOfGamePaneWidth);
 
-        score = new Label();
-      //  score.setText("1032");
-
         gameGridPane.setOnMouseMoved(new EventHandler<MouseEvent>() {
             @Override
             public void handle(MouseEvent event) {
-//                System.out.println(event.getX() + " " + event.toString());
-               // score.setText(Double.toString(event.getX()) + " :: " + Double.toString(event.getSceneX()));
                 snake.moveSnek(event.getSceneX() - 20);
             }
         });
@@ -807,11 +1162,26 @@ public class PlayGame extends Application{
         hBox.getChildren().add(optionsPane);
         optionsPane.getItems().add(optionsGridPane);
 
-//        Label score = new Label();
-//        score.setText("1032");
-        optionsGridPane.add(score, 1, 1);
-        optionsGridPane.add(Choices, 1, 2);
-        optionsGridPane.add(confirmButton, 1, 3);
+        score = new Label();
+        score.setText(String.valueOf(0));
+        score.setAlignment(Pos.CENTER);
+
+        Label scoreLabel = new Label();
+        scoreLabel.setText("SCORE");
+        scoreLabel.setFont(Font.font("Roboto", 32));
+
+        optionsGridPane.setVgap(10);
+        optionsGridPane.setPadding(new Insets(10, 10, 10, 10));
+        optionsGridPane.add(scoreLabel, 3, 0);
+        optionsGridPane.add(score, 3, 1);
+        optionsGridPane.add(Choices, 3, 3);
+        optionsGridPane.add(confirmButton, 3, 5);
+        optionsGridPane.setAlignment(Pos.CENTER);
+        optionsGridPane.setHalignment(score, HPos.CENTER);
+        optionsGridPane.setHalignment(scoreLabel, HPos.CENTER);
+        optionsGridPane.setHalignment(Choices, HPos.CENTER);
+        optionsGridPane.setHalignment(confirmButton, HPos.CENTER);
+
 
         nextCycle();
 
